fix: Sidebar titles text being cut off (#41)

--- a/src/scss/components/_components.sidebar.scss
+++ b/src/scss/components/_components.sidebar.scss
@@ -101,7 +101,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         flex: 1;
-        line-height: 1 !important;
+        line-height: 1.5 !important;
       }
 
       .note-count-label {
